# quant

./: .env.sample  Dockerfile  README.md  codebase_graph.lxg  docker-compose.yml  lynx.md  modules_graph.mmd  mvp_trading_roadmap.lxg  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
binance_feed/: feed.py
data_buffer/: buffer.py
metric_engine/: engine.py
plotly_server/: server.py
scheduler/: scheduler.py
settings/: config.py
state_engine/: state.py
telegram_notifier/: notifier.py
tests/: conftest.py  test_data_buffer.py  test_metric_engine.py  test_state_engine.py
util/: logger.py
