[tool.poetry]
name = "quant"
version = "0.1.0"
description = ""
authors = ["Quant Contributors <contributors@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
